--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           Insert famous quote regarding mathematical modeling
 Focused required time: 2 days
-Planned Content
+Planned Contents
 Root-finding perturbation theory (Pick one)
 IVP perturbation theory (Pick one)
 Quantum Mechanics Perturbation Theory
